Fix scrollbar bug and padding issues

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  scroll-behavior: smooth;
+}
+
 .swiper-button-prev,
 .swiper-button-next {
   color: #85586f;
